Fix #111820: Missing type casting in XrGraphicsBinding.cc

The line `oxr_binding.egl.getProcAddress = eglGetProcAddress` supposedly
needs a type casting for it to compile successfully under llvm16.